--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site Info
-title:              "The Plain"
-description:        "A minimalist Jekyll theme"
-author_name:        "Heiswayi Nrird" # change this to your name
+title:              "Linwei DING's Home Page"
+description:        "Graduate Student, School of Arts, Nanjing University. Email: linweiding@smail.nju.edu.cn"
+author_name:        "Linwei DING" # change this to your name
 logo_url:           https://avatars0.githubusercontent.com/u/13794983?v=4 # Get it from GitHub API: https://api.github.com/users/<username>
 
 # Site Settings
